--- a/front/ProEventos-App/src/styles.scss
+++ b/front/ProEventos-App/src/styles.scss
@@ -5,3 +5,6 @@
 
 /* Importing Datepicker SCSS file. */
 @import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
+
+/* Import fontawesome */
+@import "node_modules/@fortawesome/fontawesome-free/scss/fontawesome";
